modules/lib/dependencies/libvpx/cobalt_vpx_shim.h

/*
 * Codec selectors for cobalt_vpx_encoder_create and cobalt_vpx_decoder_create.
 * The wrapper maps each to the matching libvpx interface getter C-side
 * (vpx_codec_vp8_cx / vpx_codec_vp9_cx for encode, vpx_codec_vp8_dx /
 * vpx_codec_vp9_dx for decode), so the vpx_codec_iface_t pointer never crosses
 * the boundary:
 *
 *   0 = VP8
 *   1 = VP9
 */
#define COBALT_VPX_CODEC_VP8 0
#define COBALT_VPX_CODEC_VP9 1
/*
 * Plane selectors for cobalt_vpx_img_plane and cobalt_vpx_img_stride. The values
 * match libvpx's VPX_PLANE_Y/U/V so a decoded I420 picture is read luma-first:
 *
 *   0 = Y (luma)
 *   1 = U (Cb chroma)
 *   2 = V (Cr chroma)
 */
#define COBALT_VPX_PLANE_Y 0
#define COBALT_VPX_PLANE_U 1
#define COBALT_VPX_PLANE_V 2
/*
 * Status codes returned by the create/encode/decode entry points. Zero is
 * success and equals libvpx's VPX_CODEC_OK. A POSITIVE non-zero value is a
 * libvpx vpx_codec_err_t forwarded verbatim (VPX_CODEC_ERROR = 1,
 * VPX_CODEC_MEM_ERROR = 2, ... VPX_CODEC_INVALID_PARAM and the rest), so the
 * Java side can recover libvpx's own textual description with
 * cobalt_vpx_strerror. NEGATIVE values are shim-level failures that have no
 * libvpx code: an invalid argument supplied to the shim, an allocation failure
 * in the shim, or a failed vpx_img_wrap. Both kinds are handled by
 * cobalt_vpx_strerror.
 */
#define COBALT_VPX_OK              0
/**
 * Creates a libvpx encoder for one stream, building the encoder configuration
 * C-side from default settings stamped with the supplied scalars.
 *
 * The wrapper resolves the VP8 or VP9 encoder interface from codec, seeds a
 * vpx_codec_enc_cfg_t with vpx_codec_enc_config_default, stamps the picture
 * dimensions, a 1/frameRate timebase, single-pass error-resilient constant
 * settings, the constant-bitrate target (targetBitrateBps converted to libvpx's
 * kilobits per second, floored at 1), the quantizer window, the frame-drop
 * threshold and the keyframe cadence (automatic placement with kfMaxDist when
 * kfMaxDist is positive, otherwise keyframes disabled for request-only mode),
 * pins the encoder to a single thread, initializes the context, and applies the
 * cpuUsed speed control. The created encoder is returned through outCtx as an
 * opaque handle.
 *
 * @param codec            one of COBALT_VPX_CODEC_VP8 / COBALT_VPX_CODEC_VP9.
 * @param width            the picture width in pixels.
 * @param height           the picture height in pixels.
 * @param targetBitrateBps the target bitrate in bits per second.
 * @param frameRate        the frame rate in frames per second; the timebase
 *                         denominator.
 * @param minQuantizer     the minimum (best quality) quantizer.
 * @param maxQuantizer     the maximum (worst quality) quantizer.
 * @param dropframeThresh  the frame-drop threshold percentage, or 0 to disable.
 * @param kfMaxDist        the maximum keyframe interval in frames, or 0 to
 *                         disable automatic keyframes.
 * @param cpuUsed          the VP8E_SET_CPUUSED speed (higher is faster, lower
 *                         quality).
 * @param outCtx           receives the created encoder handle on success, or is
 *                         left holding NULL on failure; must not be NULL.
 * @return COBALT_VPX_OK on success, COBALT_VPX_BAD_PARAM for a NULL outCtx or an
 *         unknown codec, COBALT_VPX_NOMEM if the handle could not be allocated,
 *         otherwise the libvpx vpx_codec_err_t from configuration,
 *         initialization or the speed control.
 */
int32_t cobalt_vpx_encoder_create(int32_t codec,
                                  int32_t width,
                                  int32_t height,
                                  int32_t targetBitrateBps,
                                  int32_t frameRate,
                                  int32_t minQuantizer,
                                  int32_t maxQuantizer,
                                  int32_t dropframeThresh,
                                  int32_t kfMaxDist,
                                  int32_t cpuUsed,
                                  void **outCtx);
/**
 * Reconfigures a live encoder, re-deriving the configuration from libvpx
 * defaults and the supplied scalars and applying it without recreating the
 * context.
 *
 * The wrapper rebuilds the vpx_codec_enc_cfg_t exactly as cobalt_vpx_encoder_create
 * does, applies it with vpx_codec_enc_config_set, and re-applies the cpuUsed
 * speed control. libvpx forbids changing the codec or geometry on a live
 * encoder; the caller must pass the same width and height the encoder was
 * created with.
 *
 * @param ctx              the encoder handle from cobalt_vpx_encoder_create.
 * @param width            the picture width in pixels; must equal the created width.
 * @param height           the picture height in pixels; must equal the created height.
 * @param targetBitrateBps the target bitrate in bits per second.
 * @param frameRate        the frame rate in frames per second.
 * @param minQuantizer     the minimum quantizer.
 * @param maxQuantizer     the maximum quantizer.
 * @param dropframeThresh  the frame-drop threshold percentage, or 0 to disable.
 * @param kfMaxDist        the maximum keyframe interval in frames, or 0 to disable.
 * @param cpuUsed          the VP8E_SET_CPUUSED speed.
 * @return COBALT_VPX_OK on success, COBALT_VPX_BAD_PARAM for a NULL ctx,
 *         otherwise the libvpx vpx_codec_err_t from the reconfiguration or the
 *         speed control.
 */
int32_t cobalt_vpx_encoder_reconfigure(void *ctx,
                                       int32_t width,
                                       int32_t height,
                                       int32_t targetBitrateBps,
                                       int32_t frameRate,
                                       int32_t minQuantizer,
                                       int32_t maxQuantizer,
                                       int32_t dropframeThresh,
                                       int32_t kfMaxDist,
                                       int32_t cpuUsed);
/**
 * Encodes one planar I420 picture at the realtime deadline.
 *
 * The wrapper points the encoder's reusable vpx_image_t header at the supplied
 * planar I420 buffer with vpx_img_wrap, then calls vpx_codec_encode with a
 * duration of one timebase tick, the VPX_DL_REALTIME deadline, and the
 * VPX_EFLAG_FORCE_KF flag when forceKeyframe is non-zero. The pixel buffer is
 * read synchronously and need not outlive this call. Compressed output is
 * retrieved afterwards with cobalt_vpx_encoder_get_packet.
 *
 * @param ctx          the encoder handle from cobalt_vpx_encoder_create.
 * @param i420         the planar I420 pixel buffer (Y plane, then U, then V).
 * @param len          the length of i420 in bytes.
 * @param width        the picture width in pixels; must equal the encoder geometry.
 * @param height       the picture height in pixels; must equal the encoder geometry.
 * @param pts          the strictly-increasing presentation timestamp in timebase units.
 * @param forceKeyframe non-zero to force this picture to a key frame.
 * @return COBALT_VPX_OK on success, COBALT_VPX_BAD_PARAM for a NULL ctx or
 *         buffer, COBALT_VPX_IMG_WRAP_FAILED if vpx_img_wrap rejects the image,
 *         otherwise the libvpx vpx_codec_err_t from vpx_codec_encode.
 */
int32_t cobalt_vpx_encoder_encode(void *ctx,
                                  const uint8_t *i420,
                                  size_t len,
                                  int32_t width,
                                  int32_t height,
                                  int64_t pts,
                                  int32_t forceKeyframe);