modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/video/codec/vpx/bindings/CobaltVpx.java

// Generated by jextract

package com.github.auties00.cobalt.calls.media.video.codec.vpx.bindings;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class CobaltVpx {

    CobaltVpx() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();
    static final boolean TRACE_DOWNCALLS = Boolean.getBoolean("jextract.trace.downcalls");

    static void traceDowncall(String name, Object... args) {
         String traceArgs = Arrays.stream(args)
                       .map(Object::toString)
                       .collect(Collectors.joining(", "));
         System.out.printf("%s(%s)\n", name, traceArgs);
    }

    static MemorySegment findOrThrow(String symbol) {
        return SYMBOL_LOOKUP.find(symbol)
            .orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol: " + symbol));
    }

    static MethodHandle upcallHandle(Class<?> fi, String name, FunctionDescriptor fdesc) {
        try {
            return MethodHandles.lookup().findVirtual(fi, name, fdesc.toMethodType());
        } catch (ReflectiveOperationException ex) {
            throw new AssertionError(ex);
        }
    }

    static MemoryLayout align(MemoryLayout layout, long align) {
        return switch (layout) {
            case PaddingLayout p -> p;
            case ValueLayout v -> v.withByteAlignment(align);
            case GroupLayout g -> {
                MemoryLayout[] alignedMembers = g.memberLayouts().stream()
                        .map(m -> align(m, align)).toArray(MemoryLayout[]::new);
                yield g instanceof StructLayout ?
                        MemoryLayout.structLayout(alignedMembers) : MemoryLayout.unionLayout(alignedMembers);
            }
            case SequenceLayout s -> MemoryLayout.sequenceLayout(s.elementCount(), align(s.elementLayout(), align));
        };
    }

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    public static final ValueLayout.OfBoolean C_BOOL = ValueLayout.JAVA_BOOLEAN;
    public static final ValueLayout.OfByte C_CHAR = ValueLayout.JAVA_BYTE;
    public static final ValueLayout.OfShort C_SHORT = ValueLayout.JAVA_SHORT;
    public static final ValueLayout.OfInt C_INT = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfLong C_LONG_LONG = ValueLayout.JAVA_LONG;
    public static final ValueLayout.OfFloat C_FLOAT = ValueLayout.JAVA_FLOAT;
    public static final ValueLayout.OfDouble C_DOUBLE = ValueLayout.JAVA_DOUBLE;
    public static final AddressLayout C_POINTER = ValueLayout.ADDRESS
            .withTargetLayout(MemoryLayout.sequenceLayout(java.lang.Long.MAX_VALUE, JAVA_BYTE));
    public static final ValueLayout.OfLong C_LONG = ValueLayout.JAVA_LONG;
    private static final int COBALT_VPX_CODEC_VP8 = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_CODEC_VP8 0
     * }
     */
    public static int COBALT_VPX_CODEC_VP8() {
        return COBALT_VPX_CODEC_VP8;
    }
    private static final int COBALT_VPX_CODEC_VP9 = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_CODEC_VP9 1
     * }
     */
    public static int COBALT_VPX_CODEC_VP9() {
        return COBALT_VPX_CODEC_VP9;
    }
    private static final int COBALT_VPX_PLANE_Y = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_PLANE_Y 0
     * }
     */
    public static int COBALT_VPX_PLANE_Y() {
        return COBALT_VPX_PLANE_Y;
    }
    private static final int COBALT_VPX_PLANE_U = (int)1L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_PLANE_U 1
     * }
     */
    public static int COBALT_VPX_PLANE_U() {
        return COBALT_VPX_PLANE_U;
    }
    private static final int COBALT_VPX_PLANE_V = (int)2L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_PLANE_V 2
     * }
     */
    public static int COBALT_VPX_PLANE_V() {
        return COBALT_VPX_PLANE_V;
    }
    private static final int COBALT_VPX_OK = (int)0L;
    /**
     * {@snippet lang=c :
     * #define COBALT_VPX_OK 0
     * }
     */
    public static int COBALT_VPX_OK() {
        return COBALT_VPX_OK;
    }

    private static class cobalt_vpx_encoder_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltVpx.findOrThrow("cobalt_vpx_encoder_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_create(int32_t codec, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed, void **outCtx)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_encoder_create$descriptor() {
        return cobalt_vpx_encoder_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_create(int32_t codec, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed, void **outCtx)
     * }
     */
    public static MethodHandle cobalt_vpx_encoder_create$handle() {
        return cobalt_vpx_encoder_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_create(int32_t codec, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed, void **outCtx)
     * }
     */
    public static MemorySegment cobalt_vpx_encoder_create$address() {
        return cobalt_vpx_encoder_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_create(int32_t codec, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed, void **outCtx)
     * }
     */
    public static int cobalt_vpx_encoder_create(int codec, int width, int height, int targetBitrateBps, int frameRate, int minQuantizer, int maxQuantizer, int dropframeThresh, int kfMaxDist, int cpuUsed, MemorySegment outCtx) {
        var mh$ = cobalt_vpx_encoder_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_encoder_create", codec, width, height, targetBitrateBps, frameRate, minQuantizer, maxQuantizer, dropframeThresh, kfMaxDist, cpuUsed, outCtx);
            }
            return (int)mh$.invokeExact(codec, width, height, targetBitrateBps, frameRate, minQuantizer, maxQuantizer, dropframeThresh, kfMaxDist, cpuUsed, outCtx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_encoder_reconfigure {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT
        );

        public static final MemorySegment ADDR = CobaltVpx.findOrThrow("cobalt_vpx_encoder_reconfigure");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_reconfigure(void *ctx, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_encoder_reconfigure$descriptor() {
        return cobalt_vpx_encoder_reconfigure.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_reconfigure(void *ctx, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed)
     * }
     */
    public static MethodHandle cobalt_vpx_encoder_reconfigure$handle() {
        return cobalt_vpx_encoder_reconfigure.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_reconfigure(void *ctx, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed)
     * }
     */
    public static MemorySegment cobalt_vpx_encoder_reconfigure$address() {
        return cobalt_vpx_encoder_reconfigure.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_reconfigure(void *ctx, int32_t width, int32_t height, int32_t targetBitrateBps, int32_t frameRate, int32_t minQuantizer, int32_t maxQuantizer, int32_t dropframeThresh, int32_t kfMaxDist, int32_t cpuUsed)
     * }
     */
    public static int cobalt_vpx_encoder_reconfigure(MemorySegment ctx, int width, int height, int targetBitrateBps, int frameRate, int minQuantizer, int maxQuantizer, int dropframeThresh, int kfMaxDist, int cpuUsed) {
        var mh$ = cobalt_vpx_encoder_reconfigure.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_vpx_encoder_reconfigure", ctx, width, height, targetBitrateBps, frameRate, minQuantizer, maxQuantizer, dropframeThresh, kfMaxDist, cpuUsed);
            }
            return (int)mh$.invokeExact(ctx, width, height, targetBitrateBps, frameRate, minQuantizer, maxQuantizer, dropframeThresh, kfMaxDist, cpuUsed);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_vpx_encoder_encode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltVpx.C_INT,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_POINTER,
            CobaltVpx.C_LONG,
            CobaltVpx.C_INT,
            CobaltVpx.C_INT,
            CobaltVpx.C_LONG,
            CobaltVpx.C_INT
        );

        public static final MemorySegment ADDR = CobaltVpx.findOrThrow("cobalt_vpx_encoder_encode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_vpx_encoder_encode(void *ctx, const uint8_t *i420, size_t len, int32_t width, int32_t height, int64_t pts, int32_t forceKeyframe)
     * }
     */
    public static FunctionDescriptor cobalt_vpx_encoder_encode$descriptor() {
        return cobalt_vpx_encoder_encode.DESC;
    }
